# tvisa

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  barrier_test.cpp  copy_verify.cpp  cxxopts.hpp  dump.cpp  dupped_address_payload.cpp  env.sh  gateway.hpp  gen_visa_templates.hpp  generate_lsc_untyped.py  lsc.hpp  sycl_misc.hpp
benchmark/: CMakeLists.txt  Makefile  basic.sh  benchmark_2d_load.cpp  benchmark_mma.cpp  benchmark_mma_v2.cpp  dpas.cpp  gemm.cpp  visagemm.cpp  xetla.asm
examples/gpu_ipc/: .gitmodules  Makefile  Makefile.debug  README.md  accum.hpp  allreduce.cpp  allreduce.hpp  ipc_exchange.h  (+13 more)
include/: arf.hpp  arithmetic.hpp  gateway.hpp  gen_visa_templates.hpp  list_raw_loads.list  list_raw_prefetches.list  list_raw_stores.list  list_ugm_loads.list  list_ugm_prefetches.list  list_ugm_stores.list  lsc.hpp  lsc_untyped_list.hpp  mma.hpp  regmap.hpp  set_zero.hpp  sycl_misc.hpp  systolic.hpp  tile_load_store.hpp  unit_test_nbarrier.hpp  utils.hpp
test/: HardwareCaps.txt  Makefile  barrier_test.cpp  benchmark_2d_load.cpp  benchmark_mma.cpp  broken_2d_load_store.cpp  copy_verify.cpp  early_bailout.cpp  good_2d_load_store.cpp  lsc_2d_1024_load_store.cpp  lsc_64to32x2_notrans.cpp  lsc_uncache_32_and_16.cpp  test_2d_accum_visa.cpp  test_2dblock_fp16.cpp  test_2dblock_matrix.cpp  test_dump_ce.cpp  test_dump_state.cpp  test_load.cpp  test_packRegPayload.cpp  test_packRegPayloadClass.cpp  test_submatrix_cast.hpp  tile_load_store.cpp  unit_dpas_addresspayloads.cpp  unit_test.cpp  unit_test_nbarrier.hpp  unit_test_raw_sends.hpp
utils/: CMakeLists.txt
(+14 files in other folders)
